--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,9 +2,9 @@
   <section id="banner">
     <div class="content">
       <header>
-        <h1>Hi, I’m Editorial<br />
-        by HTML5 UP</h1>
-        <p>A free and fully responsive site template</p>
+        <h1>Work In Progress!!<br />
+        </h1>
+        <p>This will eventually be a real website. For now, my current website is at www.rebeccahjackson.com </p>
       </header>
       <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
       <ul class="actions">
