--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,9 +4,9 @@
       <header>
         <h1>Work In Progress!!<br />
         </h1>
-        <p>This will eventually be a real website. For now, my current website is at www.rebeccahjackson.com </p>
+        <p>This will eventually be a real website....  </p>
       </header>
-      <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+      <p>For now, my current website is at <a href="www.rebeccahjackson.com">link text</a> </p>
       <ul class="actions">
         <li><a href="#" class="button big">Learn More</a></li>
       </ul>
