--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,7 +6,7 @@
         </h1>
         <p>This will eventually be a real website....  </p>
       </header>
-      <p>For now, my current website is at <a href="www.rebeccahjackson.com">link text</a> </p>
+      <p>For now, my current website is at <a href="https://www.rebeccahjackson.com/">https://www.rebeccahjackson.com/</a> </p>
       <ul class="actions">
         <li><a href="#" class="button big">Learn More</a></li>
       </ul>
